--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -35,7 +35,7 @@
     margin-bottom: 20px;
 }
 .spotbie-copy-link-button{
-    margin-top: 30px;
+    padding-top: 60px !important;
     margin-bottom: 30px;
     cursor: pointer;
     text-align: center;
