--- a/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
@@ -3,8 +3,8 @@
     text-align: center;
     margin-top: 50px;
     margin-bottom: 5px;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 2px;
+    margin-right: 2px;
     min-height: 274px;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -54,10 +54,10 @@
 .spotbie-ad-image{
     position: relative;
     margin: 0 auto;
+    max-width: 100%;
     min-height: 300px;
     height: 300px;
-    max-height: 300px;
-    max-width: 300px;
+    max-height: 300px;    
     background-repeat: no-repeat!important;
     background-size: cover!important;
     background-position: center!important; 
@@ -92,14 +92,14 @@
 .spotbie-ad-wrapper-header{
     position: relative;
     display: inline-block;
-    max-width: 300px;
-    min-width: 300px;
+    max-width: 400px;
+    min-width: 400px;
     height: 300px;
     max-height: 300px;
     min-height: 300px;
     height: 300px;    
-    margin-left: 1%;
-    margin-right: 1%;     
+    margin-left: 2px;
+    margin-right: 2px;     
 }
 
 .sb-sponsored,
@@ -135,8 +135,12 @@
     font-size: 1rem;
 } 
 
-@media (max-width: 1100px) { 
-
+@media (max-width: 1250px) { 
+    .spotbie-ad-wrapper-header{
+        width: 32%;
+        min-width: 32%;
+        max-width: 32%;
+    }
 }
 @media (max-width: 768px) { 
     .spotbie-ad-wrapper-header{
