--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -19,8 +19,7 @@
 
 <p class="text-center">  
     <br/>
-    <span class="spotbie-text-gradient"><i class='fa fa-map-marker-alt'></i> to nearby</span>
-    
+    <span class="spotbie-text-gradient"><i class='fa fa-map-marker-alt'></i> to nearby</span>    
     <br/><br/>
     <a class="spotbie-text-link text-uppercase" [routerLink]="['/home']">SpotBie Community Members</a> 
     <br/><br/>
@@ -35,7 +34,7 @@
 </p>
 
 <div class="spotbie-button text-uppercase mb-5" [routerLink]="['/business']">
-    SCHEDULE DEMO <i class="fa fa-calendar-check"></i>
+    SCHEDULE DEMO
 </div>
 
 <app-download-mobile [buttonStyle]="1"></app-download-mobile>
