--- a/src/app/spotbie/map/info-object/info-object.component.html
+++ b/src/app/spotbie/map/info-object/info-object.component.html
@@ -203,9 +203,9 @@
     </div>
 
     <div (click)="clickGoToSponsored()" 
-          class='spotbie-info-object-is-sponsored sb-text-light-green-gradient mt-4'> 
+          class='spotbie-info-object-is-sponsored mt-4'> 
 
-        SPONSORED <i class='fa fa-search-dollar'></i> 
+        <span class='sb-text-light-green-gradient'>SPONSORED</span> <i class='fa fa-search-dollar sb-text-light-green-gradient'></i> 
 
     </div>
 
