--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -56,7 +56,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: .6rem;
-    background-color: rgba(0,0,0,.729);    
+    background-color: rgb(51 47 62);    
 }
 @media (max-width: 1100px) { 
     .spotbie-ad-wrapper-header{
