--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -7,7 +7,9 @@
         <h5 id="sp-lpTitle" class="spotbie-text-gradient text-center text-uppercase mt-4 mb-5">SPOTBIE LOYALTY POINTS</h5>
 
         <div class="spotbie-lpResetInfo spotbie-text-gradient text-uppercase mt-3 mb-3" 
-              *ngIf="userType !== eAllowedAccountTypes.Personal && loyaltyPointBalance.end_of_month !== null">
+              *ngIf="userType !== eAllowedAccountTypes.Personal && 
+                     loyaltyPointBalance.end_of_month !== null &&
+                     loyaltyPointBalance.balance !== null">
             POINTS RESET ON        
         </div>
 
@@ -20,10 +22,6 @@
             
             <span [ngClass]="loyaltyPointsClass()" *ngIf="loyaltyPointBalance.balance !== null">
                 {{ loyaltyPointBalance.balance | number:'1.0':'en-US' }}
-            </span>
-
-            <span [ngClass]="loyaltyPointsClass()" *ngIf="loyaltyPointBalance.balance === null">
-                0
             </span>
 
             <span class="sb-added-loyalty-points sb-text-light-green-gradient animated fadeOutUp" 
