--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
@@ -1,6 +1,6 @@
 
 
-<div *ngIf="userType !== eAllowedAccountTypes.Personal && userType !== eAllowedAccountTypes.Unset">
+<div>
 
     <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">SPOTBIE AD MANAGER</h4>
 
