--- a/src/app/spotbie/spotbie-logged-in/event-menu/event-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/event-menu/event-menu.component.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<div *ngIf="userType === '4'">
+<div *ngIf="userType === eAllowedAccountTypes.Personal">
 
     <h4 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">{{ business.name }} LOYALTY MENU</h4>
 
