--- a/src/app/spotbie/map/info-object/info-object.component.html
+++ b/src/app/spotbie/map/info-object/info-object.component.html
@@ -49,7 +49,6 @@
             [ngStyle]="{ 'background' : 'url(' + info_object.photo + ')'}"></div>
 
     </div>
-
     
     <div class='spotbie-info-object-image-list' 
             *ngIf="info_object.type_of_info_object == eInfoObjectType.SpotBieCommunity && ad !== undefined">
@@ -66,7 +65,7 @@
 
     </div>
 
-    <div class='spotbie-button spotbie-add-to-favorites' 
+    <!--<div class='spotbie-button spotbie-add-to-favorites' 
         (click)="addFavorite()"
         *ngIf="info_object.type_of_info_object != eInfoObjectType.TicketMaster && 
                 showFavorites && 
@@ -90,7 +89,7 @@
 
         <span class="text-uppercase"> UNFAVORITE</span>                        
 
-    </div>
+    </div>-->
 
     <div class='spotbie-search-result-phone' *ngIf="info_object.phone != ''">
         
@@ -103,14 +102,18 @@
     <div class='mt-4 mb-4' *ngIf="info_object.is_community_member">
         
         <span class='sb-text-light-green-gradient'>LOYALTY POINTS THIS MONTH</span><br/>
+
         <h1 class='spotbie-text-gradient mb-4'>
             {{ info_object.balance| number:'1.0':'en-US' }}
         </h1>
+
         <br/><br/>
+
         <span class='spotbie-text-gradient' style='font-size: .8rem;'>DOLLAR VALUE RATE</span><br/>
         <span class='sb-text-light-green-gradient mt-4 mb-4' style='font-size: 1.8rem;'>{{ info_object.rewardRate | currency : 'USD' }}</span><br/>
         <span class='spotbie-text-gradient' style='font-size: .8rem;'> PER DOLLAR SPENT</span><br/>
         <span class='sb-text-light-green-gradient mt-4'> {{ info_object.loyalty_point_dollar_percent_value | number:'1.1-2':'en-US' }}% REWARD RATE</span>
+
     </div>
 
     <div class='spotbie-info-object-rating' [ngClass]="getFontClasses()" *ngIf="info_object.type_of_info_object == eInfoObjectType.Yelp" (click)="visitInfoObjectPage()">
