--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -21,11 +21,17 @@
         <img class='sb-loyalty-points' (click)="toggleLoyaltyPoints()" src="assets/images/spotbie-loyalty-points.svg" />
       </div>
 
-      <div *ngIf="this.userType == '1' || this.userType == '2' || this.userType == '3'" class="sb-businessMenu" (click)="toggleRedeemables()">
+      <div *ngIf="this.userType == eAllowedAccountTypes.PlaceToEat || 
+                  this.userType == eAllowedAccountTypes.Shopping || 
+                  this.userType == eAllowedAccountTypes.Events"
+            (click)="toggleRedeemables()" 
+            class="sb-businessMenu">
+
         <img class='sb-loyalty-points' src="assets/images/menu spotbie-01.svg" />
+
       </div>
 
-      <div *ngIf="this.userType == '4'" class="sb-businessMenu" (click)="toggleRedeemables()">
+      <div *ngIf="this.userType == eAllowedAccountTypes.Personal" class="sb-businessMenu" (click)="toggleRedeemables()">
         <img class='sb-loyalty-points' src="assets/images/menu spotbie-01.svg" />
       </div>
 
@@ -36,10 +42,6 @@
     </td>    
 
     <td *ngIf="isDesktop" class="sb-desktopNavBar" style="text-align: right; cursor: default;"> 
-
-      <span (click)="myFavorites()" *ngIf="this.userType === eAllowedAccountTypes.Personal">
-        <i class="fas fa-star"></i>
-      </span>
 
       <span (click)="spawnCategories('food')" *ngIf="this.userType === eAllowedAccountTypes.Personal">
         PLACES TO EAT
@@ -89,9 +91,9 @@
           EVENTS <i class="fa fa-angle-right"></i>
         </div>
 
-        <div (click)="myFavorites()">
+        <!--<div (click)="myFavorites()">
           MY FAVORITES <i class="fas fa-angle-right"></i>
-        </div>
+        </div>-->
 
         <div (click)="openWindow(settingsWindow)">
           SETTINGS
