forgot about dre

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
 
 <div class="spotbie-main-holder" id="spotbieMainHolder">
 
-    <app-map [business]="false" #app_map></app-map>
+    <app-map [business]="false" #app_map></app-map>z
 
     <div class="spotbie-menu-page-padding-top-not-logged"></div>
 
