seek and destroy

--- a/src/app/make-payment/make-payment.component.html
+++ b/src/app/make-payment/make-payment.component.html
@@ -30,7 +30,7 @@
 
             <h4 class="spotbie-text-gradient text-uppercase mt-4">{{ ad.name }}</h4>
 
-            <h3 class="sb-text-light-green-gradient mt-4">{{ ad.dollar_cost | currency: 'USD'}} monthly</h3>
+            <h3 class="sb-text-light-green-gradient mt-4">{{ ad.dollar_cost | currency: 'USD'}}/month</h3>
     
             <img class="sb-adImage" [src]="ad.images" />
 
@@ -40,7 +40,7 @@
 
             <h4 class="spotbie-text-gradient text-uppercase mt-4">{{ ad.name }}</h4>
 
-            <h3 class="sb-text-light-green-gradient mt-4">$9.99 monthly</h3>
+            <h3 class="sb-text-light-green-gradient mt-4">$9.99/month</h3>
     
             <img class="sb-adImage" [src]="ad.images" />
 
